minor (#88): Implemented support for user fields `username`, `organisation` and `intended_use`
